# cmake版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.7.2)

SET(LIBUV_VERSION 1.35.0)
CONFIGURE_FILE(CMakeLists.txt.in libuv-download/CMakeLists.txt)
EXECUTE_PROCESS(COMMAND "${CMAKE_COMMAND}" -G "${CMAKE_GENERATOR}" . WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/libuv-download")
EXECUTE_PROCESS(COMMAND "${CMAKE_COMMAND}" --build . WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/libuv-download")

ADD_SUBDIRECTORY("${CMAKE_CURRENT_BINARY_DIR}/libuv-src" "${CMAKE_BINARY_DIR}/libuv-build")

SET(LIBUV_ROOT_DIR ${CMAKE_CURRENT_BINARY_DIR}/libuv-src)

FIND_PATH(LIBUV_INCLUDE_DIR
	NAMES uv.h
	HINTS ${libuv_SOURCE_DIR}/include
)

SET(LIBUV_LIBRARY optimized uv debug uvd)
SET(LIBUV_INCLUDE_DIRS ${LIBUV_INCLUDE_DIR} CACHE PATH "libuv library directory" FORCE)
SET(LIBUV_LIBRARIES ${LIBUV_LIBRARY} CACHE DOC "libuv all library" FORCE)